add_library(NonEuclideanSFMLSource
  Camera.cpp
  Camera.h
  Collider.cpp
  Collider.h
  Engine.cpp
  Engine.h
  Floorplan.h
  FrameBuffer.cpp
  FrameBuffer.h
  GameHeader.h
  Ground.h
  House.h
  Input.cpp
  Input.h
  Level1.cpp
  Level1.h
  Level2.cpp
  Level2.h
  Level3.cpp
  Level3.h
  Level4.cpp
  Level4.h
  Level5.cpp
  Level5.h
  Level6.cpp
  Level6.h
  Mesh.cpp
  Meshes
  Mesh.h
  Object.cpp
  Object.h
  Physical.cpp
  Physical.h
  Pillar.h
  PillarRoom.h
  Player.cpp
  Player.h
  Portal.cpp
  Portal.h
  Resources.cpp
  Resources.h
  Scene.h
  Shader.cpp
  Shader.h
  Shaders
  Sky.h
  Sphere.h
  Statue.h
  Texture.cpp
  Texture.h
  Textures
  Timer.h
  Tunnel.h
  Vector.h
)
  